force-app/main/default/objects/Envio__c/Envio__c.object-meta.xml
<CustomObject>
    <label>Envio</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Envio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>