force-app/main/default/objects/Envio__c/fields/Almacen_de_destino__c.field-meta.xml
<CustomField>
    <fullName>Almacen_de_destino__c</fullName>
    <label>Almacen de destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCN</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>VLN</fullName>
            </value>
            <value>
                <fullName>SEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>