force-app/main/default/objects/Envio__c/fields/Fecha_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_envio__c</fullName>
    <label>Fecha de envio</label>
    <type>Date</type>
</CustomField>