force-app/main/default/objects/Envio__c/fields/jsonService__c.field-meta.xml
<CustomField>
    <fullName>jsonService__c</fullName>
    <label>jsonService</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>