force-app/main/default/objects/Envio__c/fields/Trazabilidad__c.field-meta.xml
<CustomField>
    <fullName>Trazabilidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trazabilidad</label>
    <referenceTo>Trazabilidad__c</referenceTo>
    <relationshipLabel>Envios</relationshipLabel>
    <relationshipName>Envios</relationshipName>
    <type>Lookup</type>
</CustomField>